nes-systests/systest/tests/testdata/errors/result/ResultIsSubsetOfExpected.dummy
Source stream UINT64 id UINT64 value INLINE
1,1
2,2

SINK CORRECT_SINK UINT64 stream$id UINT64 stream$value
SELECT id, value FROM stream INTO CORRECT_SINK
----
1 1
2 2

SINK INCORRECT_SINK UINT64 stream$id UINT64 stream$value
SELECT id FROM stream INTO INCORRECT_SINK
----
1 1
2 2
